--- a/src/components/service-card/service-card.styles.css
+++ b/src/components/service-card/service-card.styles.css
@@ -1,17 +1,20 @@
 .card{
-    width:20rem;
+    width:19rem;
     margin-top: 3rem;
+    border-radius: 20px;
+
 }
 .card:hover{
     box-shadow: 5px 10px 20px 1px rgba(0,0,0,0.253) !important; 
 }
 .card-body{
-    padding:2rem 0 !important; 
+    padding: 1.5rem 0 !important; 
 }
 .card-text{
     font-size: .9rem;
-    padding: 0.4rem 1.9rem;
+    padding: 0.4rem 1.5rem;
 }
+
 
 .card-img-top:hover{
     transform: scale(1.1);
@@ -22,6 +25,7 @@
 } */
 .overflow{
     overflow: hidden;
+    /* height: 170px !important; */
 }
 .service-card .overflow{
  display: flex;
@@ -31,11 +35,12 @@
 
 }
 .service-card{
-    height: 380px;
+    height: 25rem;
+    
 }
 .background-image{
-    width: 318px;
-    height: 160px;
+    width: 310px;
+    height: 200px;
     /* width: 100%;
     height: 100%; */
     background-position: center;
